reports: calendar aside overflow fix

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -368,6 +368,13 @@ select::-ms-expand {
   }
 }
 
+
+@media (max-width: 991px) {
+  .aside {
+    min-width: 290px !important;
+  }
+}
+
 .aside-body {
   @media (min-width: $screen-xs-min) {
     min-width: 350px;
